<resources>
    <string name="app_name">CPC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="public_health_string">Embark on a journey towards mental wellness with our compassionate psychiatry services, available at the Public Health Clinic. </string>
    <string name="dentistry_string">At the Dentistry Clinic, we understand the importance of holistic health, including mental well-being.</string>
    <string name="ent_string">our journey towards mental wellness begins at the Ear, Nose, Throat (ENT) Clinic. </string>
    <string name="physical_string">At the Physical Therapy Clinic, we understand the importance of a holistic approach to health. </string>
    <string name="cardiology_string">Mental wellness is integral to overall health, and at the Cardiology Clinic, we prioritize your well-being in every aspect. </string>
    <string name="laboratory_string">Mental wellness is a vital component of overall health, and our Laboratory Services are committed to supporting your journey towards well-being.</string>
    <string name="pharmacy_string">Beyond prescriptions, our Pharmacy is dedicated to supporting your holistic health, including mental well-being. </string>
    <string name="title_activity_patient_home_page">PatientHomePageActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>